Fixed whitespace under the footer

--- a/src/styles.css
+++ b/src/styles.css
@@ -66,7 +66,7 @@ body {
 }
 
 .content {
-  min-height: 85vh;
+  min-height: 95vh;
   padding-bottom: 40px;
   padding-top: 30px;
 }
